--- a/projects.html
+++ b/projects.html
@@ -399,7 +399,7 @@ ul.row hr {
 
           <li class="item col-md-4">
           <div class="gal-item">  
-            <img src="images/IMG_0830[170].jpeg" alt="" class="img-responsive"> 
+            <img src="images/projects/10.webp" alt="" class="img-responsive"> 
             <p>
               <span style="font-weight:bold">Type -</span> Warehouse
            </p>
@@ -417,7 +417,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/IMG_0811[163].jpeg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/projects/4.webp" width="100%" alt="" class="img-responsive"> 
               <p>
                 <span style="font-weight:bold">Type -</span> Warehouse
              </p>
@@ -436,7 +436,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/IMG_0834[168].jpeg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/projects/8.webp" width="100%" alt="" class="img-responsive"> 
               <p>
                 <span style="font-weight:bold">Type -</span> Warehouse
              </p>
@@ -455,7 +455,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/IMG_0832[175].jpeg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/projects/7.webp" width="100%" alt="" class="img-responsive"> 
               <p >
                 <span style="font-weight:bold">Type -</span> Warehouse
              </p>
@@ -473,7 +473,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/IMG_0837[172].jpeg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/projects/11.webp" width="100%" alt="" class="img-responsive"> 
               <p >
                 <span style="font-weight:bold">Type -</span> Warehouse
              </p>
@@ -513,7 +513,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/pexels-gilberto-olimpio-8151296.jpg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/projects/15.webp" width="100%" alt="" class="img-responsive"> 
               <p>
                 <span style="font-weight:bold">Type -</span> Factory
              </p>
@@ -549,7 +549,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/pexels-mathias-reding-7108779.jpg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/pexels-mathias-reding-7108779.webp" width="100%" alt="" class="img-responsive"> 
               <p>
                 <span style="font-weight:bold">Type -</span> 
                 Commercial Building
@@ -568,7 +568,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/pexels-pixabay-7931.jpg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/projects/17.webp" width="100%" alt="" class="img-responsive"> 
               <p >
                 <span style="font-weight:bold">Type -</span> Commercial Building
              </p>
@@ -586,7 +586,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/pexels-jiyoung-kim-4513940.jpg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/projects/14.webp" width="100%" alt="" class="img-responsive"> 
               <p>
                 <span style="font-weight:bold">Type -</span> Commercial Building
              </p>
@@ -604,7 +604,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/IMG_0813[166].webp" width="100%" alt="" class="img-responsive"> 
+              <img src="images/projects/2.webp" width="100%" alt="" class="img-responsive"> 
               <p>
                 <span style="font-weight:bold">Type -</span> Warehouse
              </p>
@@ -622,7 +622,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/pexels-david-slaager-5759147.jpg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/pexels-david-slaager-5759147.webp" width="100%" alt="" class="img-responsive"> 
               <p >
                 <span style="font-weight:bold">Type -</span> Warehouse
              </p>
@@ -658,14 +658,14 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/IMG_0836[173].webp" width="100%" alt="" class="img-responsive"> 
-              <p >
+              <img src="images/projects/9.webp" width="100%" alt="" class="img-responsive"> 
+              <p>
                 <span style="font-weight:bold">Type -</span> Warehouse
              </p>
-             <p >
+             <p>
                 <span style="font-weight:bold">Client/Site -</span> Subin James, R1 International
              </p>
-             <p >
+             <p>
               <span style="font-weight:bold">Area -</span> 18000 Sqft
              </p> 
              <p >
@@ -676,7 +676,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/interior-new-warehouse.jpg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/projects/12.webp" width="100%" alt="" class="img-responsive"> 
               <p >
                 <span style="font-weight:bold">Type -</span> Warehouse
              </p>
@@ -694,7 +694,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/pexels-kevin-chuang-12771396.jpg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/projects/16.webp" width="100%" alt="" class="img-responsive"> 
               <p>
                 <span style="font-weight:bold">Type -</span> Wholesale Shop, N.H, Chalakudy
              </p>
@@ -712,7 +712,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/industrial-building-22405299.jpg" width="50%" height="100%" alt="" class="img-responsive"> 
+              <img src="images/industrial-building-22405299.webp" width="50%" height="100%" alt="" class="img-responsive"> 
               <p>
                 <span style="font-weight:bold">Type -</span> Factory Building
              </p>
@@ -730,7 +730,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/pexels-kevin-chuang-12771407.jpg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/pexels-kevin-chuang-12771407.webp" width="100%" alt="" class="img-responsive"> 
              <p>
                 <span style="font-weight:bold">Type -</span> Warehouse, Pathiyara Builders
              </p>
@@ -748,7 +748,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/pexels-kaboompics-com-6180.jpg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/projects/18.webp" width="100%" alt="" class="img-responsive"> 
               <p>
                 <span style="font-weight:bold">Type -</span> Factory Building
              </p>
@@ -766,7 +766,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/pexels-andrea-piacquadio-3831826.webp" width="100%" alt="" class="img-responsive"> 
+              <img src="images/pexels-andrea-piacquadio-3831826.webp" width="100%" alt="" class="img-responsive"> <!--change--> 
               <p>
                 <span style="font-weight:bold">Type -</span> Silo Plant
              </p>
@@ -784,7 +784,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/pexels-david-slaager-5759123.jpg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/projects/13.webp" width="100%" alt="" class="img-responsive"> 
               <p>
                 <span style="font-weight:bold">Type -</span> Steel Godown
              </p>
@@ -802,7 +802,7 @@ ul.row hr {
 
           <li class="item col-md-4">
             <div class="gal-item"> 
-              <img src="images/pexels-pixabay-209251.jpg" width="100%" alt="" class="img-responsive"> 
+              <img src="images/pexels-pixabay-257636.webp" width="100%" alt="" class="img-responsive"> 
               <p>
                 <span style="font-weight:bold">Type -</span> Factory Building 2 Nos
              </p>
