--- a/gallery.html
+++ b/gallery.html
@@ -263,8 +263,8 @@ border-bottom:1px solid grey;
             <!-- ITEM -->
             <li class="item col-md-4 building construction renovate">
               <div class="gal-item"> 
-                <a href="images/IMG_0813[166].webp">
-                <img src="images/IMG_0813[166].webp" alt="" class="img-responsive">
+                <a href="images/projects/2.webp">
+                <img src="images/projects/2.webp" alt="" class="img-responsive">
                 </a> 
               </div>
             </li>
@@ -273,8 +273,8 @@ border-bottom:1px solid grey;
             <li class="item col-md-4  construction">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
-                <a href="images/IMG_0816[162].jpeg">
-                <img src="images/IMG_0816[162].jpeg" alt="" class="img-responsive"> 
+                <a href="images/projects/3.webp">
+                <img src="images/projects/3.webp" alt="" class="img-responsive"> 
                 </a>
               </div>
             </li>
@@ -283,8 +283,8 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interio renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
-                <a href="images/IMG_0818[171].jpeg">
-                <img src="images/IMG_0818[171].jpeg" alt="" class="img-responsive"> 
+                <a href="images/projects/6.webp">
+                <img src="images/projects/6.webp" alt="" class="img-responsive"> 
                 </a>
               </div>
             </li>
@@ -293,8 +293,8 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interior building construction">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
-                <a href="images/IMG_0811[163].jpeg">
-                <img src="images/IMG_0811[163].jpeg" alt="" class="img-responsive"> 
+                <a href="images/projects/4.webp">
+                <img src="images/projects/4.webp" alt="" class="img-responsive"> 
                 </a>
               </div>
             </li>
@@ -302,8 +302,8 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 building construction renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
-                <a href="images/IMG_0821[169].webp">
-                <img src="images/IMG_0821[169].webp" alt="" class="img-responsive"> 
+                <a href="images/projects/10.webp">
+                <img src="images/projects/10.webp" alt="" class="img-responsive"> 
                 </a>
               </div>
             </li>
@@ -312,8 +312,8 @@ border-bottom:1px solid grey;
             <li class="item col-md-4  construction">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
-                <a href="images/IMG_0830[170].jpeg">
-                <img src="images/IMG_0830[170].jpeg" alt="" class="img-responsive"> 
+                <a href="images/projects/8.webp">
+                <img src="images/projects/8.webp" alt="" class="img-responsive"> 
                 </a>
               </div>
             </li>
@@ -322,8 +322,8 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interio renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
-                <a href="images/IMG_0832[175].jpeg">
-                <img src="images/IMG_0832[175].jpeg" alt="" class="img-responsive"> 
+                <a href="images/projects/12.webp">
+                <img src="images/projects/12.webp" alt="" class="img-responsive"> 
                 </a>
               </div>
             </li>
@@ -332,8 +332,8 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interior building construction">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
-                <a href="images/IMG_0834[168].jpeg">
-                <img src="images/IMG_0834[168].jpeg" alt="" class="img-responsive"> 
+                <a href="images/projects/11.webp">
+                <img src="images/projects/11.webp" alt="" class="img-responsive"> 
                 </a>
               </div>
             </li>
@@ -342,8 +342,8 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 building construction renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
-                <a href="images/IMG_0837[172].jpeg">
-                <img src="images/IMG_0837[172].jpeg" alt="" class="img-responsive"> 
+                <a href="images/projects/17.webp">
+                <img src="images/projects/17.webp" alt="" class="img-responsive"> 
                 </a>
               </div>
             </li>
@@ -392,8 +392,8 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interio renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE --> 
-                <a href="images/dcd058ad-402b-437c-be29-067b1899954e[164].jpeg">
-                <img src="images/dcd058ad-402b-437c-be29-067b1899954e[164].jpeg" style="height:193px" alt="" class="img-responsive"> 
+                <a href="images/projects/123.webp">
+                <img src="images/projects/123.webp" style="height:193px" alt="" class="img-responsive"> 
                 </a>
               </div><br>
             </li>
@@ -401,11 +401,20 @@ border-bottom:1px solid grey;
             <li class="item col-md-4 interio renovate">
               <div class="gal-item"> 
                 <!-- GALLERY IMAGE -->
-                <a href="images/IMG_0836[173].webp"> 
-                <img src="images/IMG_0836[173].webp" style="height:193px;" alt="" class="img-responsive"> 
+                <a href="images/projects/9.webp"> 
+                <img src="images/projects/9.webp" style="height:193px;" alt="" class="img-responsive"> 
                 </a>
               </div>
-            </li>           
+            </li> 
+            <li class="item col-md-4 interio renovate">
+              <div class="gal-item"> 
+                <!-- GALLERY IMAGE -->
+                <a href="images/projects/3f823[165].webp"> 
+                <img src="images/projects/3f823[165].webp" style="height:193px;" alt="" class="img-responsive"> 
+                </a>
+              </div>
+            </li> 
+
           </ul>
 
           <br>
