--- a/about.html
+++ b/about.html
@@ -115,7 +115,8 @@ border-bottom:1px solid grey;
 	}
 
   div.row p {
-    font-size:12px;
+    font-size:13.5px;
+    letter-spacing: 1px;
   }
 
   .container h6.remfeatures {
@@ -209,7 +210,7 @@ height:380px;
 @media (max-width:350px){
 
   nav .ownmenu li a {
-	font-size: 10px;
+	font-size: 12px;
 	margin: 0;
 	padding: 8px;
   }
@@ -353,6 +354,10 @@ margin-left: 12px;
 		color: #ededed;
 		border-bottom:1px solid grey;	
 	}
+}
+
+div.row p {
+  letter-spacing: 1px;
 }
 </style>
 </head>
